# elgamal

./: Cargo.toml  README.md
src/: ciphertext.rs  lib.rs  multiply.rs  private.rs  public.rs
