[package]
name = "elgamal_ristretto"
version = "0.2.4"
authors = ["Inigo Querejeta Azurmendi <querejeta.inigo@gmail.com>, Gonçalo Pestana <g6pestana@gmail.com>"]
edition = "2018"
exclude = ["**/.gitignore", ".gitignore","/target/*"]
description = "A pure-Rust implementation of ElGamal encryption using the Ristretto group over Curve25519"
readme = "README.md"
keywords = ["cryptography", "elgamal", "additive-homomorphic"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/iquerejeta/elgamal"
license = "MIT"


[dependencies]
borsh = "0.7.1"
curve25519-dalek = { version = "2", default-features = false, features = ["serde", "borsh"], git = "https://github.com/garious/curve25519-dalek", rev = "60efef3553d6bf3d7f3b09b5f97acd54d72529ff" }
zkp = { version = "0.7.0", git = "https://github.com/garious/zkp", rev = "ed9eba6de4214fe67466b662b0d8017c3645c3f8"}
rand_core = { version = "0.5.1", default-features = false }
sha2 = "0.8.0"
clear_on_drop = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html"
    ]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "elgamal-ristretto"
harness = false

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std"]
nightly = ["curve25519-dalek/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
