[package]
name = "elgamal_ristretto"
version = "0.2.4"
authors = ["Inigo Querejeta Azurmendi <querejeta.inigo@gmail.com>, Gonçalo Pestana <g6pestana@gmail.com>"]
edition = "2018"
exclude = ["**/.gitignore", ".gitignore","/target/*"]
description = "A pure-Rust implementation of ElGamal encryption using the Ristretto group over Curve25519"
readme = "README.md"
keywords = ["cryptography", "elgamal", "additive-homomorphic"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/iquerejeta/elgamal"
license = "MIT"


[dependencies]
borsh = "0.8.1"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["serde", "borsh"], git = "https://github.com/garious/curve25519-dalek", rev = "fcef1fa11b3d3e89a1abf8986386ba9ae375392c" }
zkp = { version = "0.8", git = "https://github.com/garious/zkp", rev = "e4b350e123476fcbd4b54d36a5d446d4aef5d842" }
rand_core = { version = "0.6", default-features = false }
sha2 = "0.9.0"
clear_on_drop = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
solana-sdk = { version = "1.4.0", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html"
    ]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "elgamal-ristretto"
harness = false

[features]
default = ["std", "u64_backend", "solana-sdk/default"]
program = ["std", "u64_backend", "solana-sdk/program"]
std = ["curve25519-dalek/std"]
nightly = ["curve25519-dalek/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
